# pynaptics

./: .gitattributes  .gitignore  README.md  debug_input.json  entries.bib  main.py  pyproject.toml
data/: ResearchRabbit_Export.bib  abstracts.csv  libros.csv  output.bib  output.csv
notebooks/convert_files/: lib.py  nb_load2export.ipynb
src/: biblatex_checker.py  biblatex_cure.py  isbn_metadata_retriver.py
src/NLP_Preprocessing/: NLP_sentence_preproc.py  NLP_sentence_preproc_trf.py  README.md  extra.yml  sentence_preproc.py  sentence_preproc_trf.py  utils.py
src/biblatex_checker/: README.md  biblatex_checker.py
src/folder_biblatex_pdf_automation/: README.md  folder_latex.py
src/isbn_metadata/: README.md  isbn_metadata_retriver.py
src/latexpdf_to_plaintext/: latexpdf_to_text.py
src/nlp_preprocessing/: README.md  sentence_preproc.py  utils.py
