[project]
name = "pynaptics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'numpy',
    'pandas',
    'matplotlib',
    'seaborn',
    'pypandoc',
    "spacy>=3.8,<3.9",
    "spacy-transformers>=1.3,<2",
    "torch>=2.8.0",
    "transformers>=4.44,<5",
    "huggingface-hub[cli]>=0.24,<1",
    "tokenizers>=0.21.4",
    "hf-transfer>=0.1.9",
]
